--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,6 +3,14 @@
   display:none
 }
 
+#notfund{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 65px;
+  font-size:50px;
+}
+
 .body {
   display: grid;
   justify-items: center;
