--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,14 +1,13 @@
-
-#keyremove{
-  display:none
+#keyremove {
+  display: none;
 }
 
-#notfund{
+#notfund {
   display: flex;
   flex-direction: column;
   align-items: center;
   margin-top: 65px;
-  font-size:50px;
+  font-size: 50px;
 }
 
 .body {
@@ -49,7 +48,7 @@
 }
 .form__field::placeholder {
   color: transparent;
- font-size: black;
+  font-size: black;
 }
 
 .form__field:placeholder-shown ~ .form__label {
@@ -78,19 +77,12 @@
 #mainuser {
   width: 100%;
 }
-.conteudo {
-  display: grid;
-  grid-template-columns: 30% 70%;
-  justify-content: space-around;
-  padding: 50px;
-  margin-top: 15px;
 
-}
-
-.user{
-  display:flex;
+.user {
+  display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top:10px;
 }
 
 .user-profile {
@@ -104,7 +96,6 @@
   width: 250px;
   margin: 0 auto 16px;
   border-radius: 20%;
-
 }
 
 .user-name {
@@ -151,6 +142,65 @@
   margin-right: 10px;
 }
 
+.repos-title {
+  display: grid;
+  grid-auto-flow: column;
+  justify-content: space-around;
+  padding: 5px;
+}
+
+.title-cell {
+  font-size: 30px;
+}
+
+.table-cell-name {
+  align-items: center;
+  font-size: 20px;
+  display: flex;
+  justify-content: space-evenly;
+}
+.table-cell-button {
+  padding: 10px;
+  width: 50%;
+  height: 100%;
+  border: none;
+  background-color: white;
+}
+
+.table-cell-button:hover {
+  background-color: #d3d3d3;
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.4);
+  transition: 0, 5s;
+}
+
+.table-cell-name:hover {
+  background-color: whitesmoke;
+  transition: 0.3s;
+}
+.table-cell-a {
+  color: #404048;
+  text-decoration-line: none;
+}
+.table-cell-a:hover {
+  color: rgb(63, 63, 233);
+  transition: 0, 4;
+}
+
+.table-conteiner {
+  display: grid;
+  margin: 20px;
+  grid-template-columns: 55% 45%;
+  padding: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
+  align-items: center;
+  justify-items: center;
+}
+
+.table-conteiner:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
 @media (min-width: 576px) {
   .user-image {
     width: 280px;
@@ -168,102 +218,54 @@
   .user-info {
     width: 280px;
   }
+
+  .repos{
+    padding:5px;
+  }
+}
+
+@media (min-width: 768px) {
+  .user-repositories {
+    margin: 20px;
+  }
+
+  .repositories-list {
+    width: 80%;
+  }
+
+  .repos{ 
+    display:grid;
+    align-self: baseline;
+    margin: 0px 0px 0px 90px;
+    justify-items: inherit;
+  }
+
+  .conteudo {
+    display: grid;
+    grid-template-columns: 30% 70%;
+    justify-content: space-around;
+    padding: 50px;
+    margin-top: 15px;
+    }
+}
+
+@media (min-width: 992px) {
+  .user-repositories {
+    width: 60%;
+  }
+
+  .repositories-list {
+    width: 100%;
+  }
 }
 
 @media (min-width: 992px) {
   .user-profile {
     margin-top: 24px;
   }
+
+.repos{
+  width:90%
 }
 
-.repos{ 
-   display:grid;
-   align-self: baseline;
-   margin: 0px 0px 0px 20px;
-   justify-items:center;
-
-}
-.repos-title{
-  display: grid;
-  grid-auto-flow: column;
-  justify-content: space-around;
-  padding:5px;
-  width:70%;
-  
-}
-
-.repos-cells{
-  width: 70%;
-}
-
-.title-cell{
-font-size:30px;
-}
-
-.table-cell-name{
-  align-items:center;
-  font-size:20px;
-  display:flex;
-  justify-content: space-evenly;
-  
-}
-.table-cell-button{
- padding: 10px;
- width:50%;
- height:100%;
- border:none;
- background-color: white ;
-}
-.table-cell-button:hover{
-  background-color:#D3D3D3;
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.4);
-  transition:0,5s;
-}
-
-.table-cell-name:hover{
-  background-color:whitesmoke; 
-  transition: 0.3s;
-}
-.table-cell-a{
-  color: #404048;
-  text-decoration-line: none;
-}
-.table-cell-a:hover{
-  color: rgb(63, 63, 233);
-  transition: 0,4;
-
-}
-
-.table-conteiner{
-  display: grid;
-  margin:20px;
-  grid-template-columns: 55% 45%;
-  padding:20px;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  transition: 0.3s;
-  align-items: center;
-  justify-items: center;
-}
-
-.table-conteiner:hover{
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-}
-@media(min-width: 768px){
-  .user-repositories{
-    margin: 20px;
-  }
-
-  .repositories-list{
-    width: 80%;
-  }
-}
-
-@media(min-width: 992px){
-  .user-repositories{
-    width: 60%;
-  }
-
-  .repositories-list{
-    width: 100%;
-  }
 }
